# musicdl

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DJ_SESSION_PLAN.md  LICENSE  README.md  TODO.md  config.example.toml  pyproject.toml
.claude/commands/: improve.md  lint.md  review.md  test.md
.claude/hooks/: guard_env.py  lint_on_edit.py
.claude/rules/: architecture.md  testing.md
src/musicdl/: __main__.py  cli.py  config.py  database.py  errors.py  pipeline.py  pipeline_import.py
src/musicdl/downloader/: detector.py  sldl.py
src/musicdl/genre/: beatport.py  cache.py  lastfm.py  musicbrainz.py  normalizer.py  resolver.py  taxonomy.py
src/musicdl/importer/: scanner.py
src/musicdl/organizer/: filesystem.py
src/musicdl/spotify/: client.py  models.py
src/musicdl/tagger/: id3.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_database.py  test_detector.py  test_filesystem.py  test_genre_resolver.py  test_normalizer.py  test_sldl.py
